--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 
 services:
   backend:
-    image: docker.io/library/app-server
+    image: mihallut/radency-first-app:app-server
     depends_on:
       - "postgres"
     container_name: first-app-server
@@ -37,7 +37,7 @@ services:
       - dev
 
   frontend:
-    image: docker.io/library/app-client
+    image: mihallut/radency-first-app:app-client
     depends_on:
       - "backend"
     container_name: first-app-client
