--- a/first-app.client/package.json
+++ b/first-app.client/package.json
@@ -23,6 +23,10 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngrx/effects": "^16.3.0",
+    "@ngrx/entity": "^16.3.0",
+    "@ngrx/store": "^16.3.0",
+    "@ngrx/store-devtools": "^16.3.0",
     "guid-typescript": "^1.0.9",
     "jest-editor-support": "*",
     "ngx-autosize": "^2.0.4",
